fix: remove horizontal scroll bar

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -87,12 +87,12 @@ time,
 mark,
 audio,
 video {
-    margin: 0;
-    padding: 0;
-    border: 0;
-    font-size: 100%;
-    font: inherit;
-    vertical-align: baseline;
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline;
 }
 
 /* HTML5 display-role reset for older browsers */
@@ -107,54 +107,53 @@ hgroup,
 menu,
 nav,
 section {
-    display: block;
+  display: block;
 }
 
 body {
-    line-height: 1;
+  line-height: 1;
 }
 
 ol,
 ul {
-    list-style: none;
+  list-style: none;
 }
 
 blockquote,
 q {
-    quotes: none;
+  quotes: none;
 }
 
 blockquote:before,
 blockquote:after,
 q:before,
 q:after {
-    content: '';
-    content: none;
+  content: "";
+  content: none;
 }
 
 table {
-    border-collapse: collapse;
-    border-spacing: 0;
+  border-collapse: collapse;
+  border-spacing: 0;
 }
 
 /**/
-*{
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif
+* {
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
 }
 
-nav, main {
-    background-color: #FCEDDA;
+nav,
+main {
+  background-color: #fcedda;
 }
-.signup-navigation, .login-navigation{
-    background-color: #EE4E34;
-    height: 30rem;
+.signup-navigation,
+.login-navigation {
+  background-color: #ee4e34;
+  height: 30rem;
 }
-main{
-    height: auto;
+main {
+  height: auto;
 }
-main.fullScreen{
-    min-height: 100vh;
-min-width: 100vw;
-overflow: hidden;
-
+main.fullScreen {
+  min-height: 100vh;
 }
